--- a/src/components/FeaturedProducts/Featured.scss
+++ b/src/components/FeaturedProducts/Featured.scss
@@ -1,51 +1,88 @@
 /* src/components/FeaturedProducts/FeaturedProducts.css */
+
 .featured-products {
-    padding: 50px;
-    background-color: #fff;
-    text-align: center;
-  }
+  padding: 50px;
+  background-color: #fff;
+  text-align: center;
+}
 
-  .products-grid{
-    margin-top: 2rem;
-  }
-  
-  .products-header h2 {
-    font-size: 2.5em;
-    margin-bottom: 10px;
-  }
-  
-  .products-header p {
-    font-size: 1.2em;
-    margin-bottom: 20px;
-  }
-  
-  .products-header button {
-    margin-bottom: 30px;
-  }
-  
-  .card {
-    margin-bottom: 20px;
-  }
-  
-  .card-body {
-    text-align: left;
-  }
-  
-  .card-title {
-    font-size: 1.5em;
-    margin-top: 10px;
-  }
-  
-  .card-text {
-    font-size: 1em;
-    color: #666;
-  }
+.products-grid {
+  margin-top: 2rem;
+}
 
-  .card-img-top{
-    height: 300px;
-  }
+.products-header h2 {
+  font-size: 2.5em;
+  margin-bottom: 10px;
+}
 
-  .badge{
-    float: right;
-    margin-bottom: 2px;
+.products-header p {
+  font-size: 1.2em;
+  margin-bottom: 20px;
+}
+
+.products-header button {
+  margin-bottom: 30px;
+}
+
+.card {
+  margin-bottom: 20px;
+}
+
+.card-body {
+  text-align: left;
+}
+
+.card-title {
+  font-size: 1.5em;
+  margin-top: 10px;
+}
+
+.card-text {
+  font-size: 1em;
+  color: #666;
+}
+
+.card-img-top {
+  height: 300px; /* Default height */
+}
+
+.badge {
+  float: right;
+  margin-bottom: 2px;
+}
+
+/* Responsive Design */
+/* Mobile phones (up to 575px) */
+@media (max-width: 575px) {
+  .card-img-top {
+      height: auto; /* Adjust as needed */
   }
+}
+
+/* Tablets (576px to 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .card-img-top {
+      height: 250px; /* Adjust as needed */
+  }
+}
+
+/* Laptops (768px to 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .card-img-top {
+      height: 300px; /* Adjust as needed */
+  }
+}
+
+/* Desktops (1025px to 1440px) */
+@media (min-width: 1025px) and (max-width: 1440px) {
+  .card-img-top {
+      height: 350px; /* Adjust as needed */
+  }
+}
+
+/* Televisions (1441px and up) */
+@media (min-width: 1441px) {
+  .card-img-top {
+      height: 400px; /* Adjust as needed */
+  }
+}
