--- a/src/components/SocialMedia/SocialMedia.css
+++ b/src/components/SocialMedia/SocialMedia.css
@@ -21,4 +21,36 @@
   margin-right: 10px;
 }
 
+/* Responsive Design */
+/* Mobile phones (up to 575px) */
+@media (max-width: 575px) {
+  .card {
+    max-width: 100%;
+  }
+}
+/* Tablets (576px to 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .card {
+    max-width: 80%;
+  }
+}
+/* Laptops (768px to 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .card {
+    max-width: 600px;
+  }
+}
+/* Desktops (1025px to 1440px) */
+@media (min-width: 1025px) and (max-width: 1440px) {
+  .card {
+    max-width: 700px;
+  }
+}
+/* Televisions (1441px and up) */
+@media (min-width: 1441px) {
+  .card {
+    max-width: 800px;
+  }
+}
+
 /*# sourceMappingURL=SocialMedia.css.map */
