--- a/src/components/SocialMedia/SocialMedia.scss
+++ b/src/components/SocialMedia/SocialMedia.scss
@@ -1,23 +1,58 @@
 .social-media-section {
-    text-align: center;
-    margin: 50px 0;
-  }
-  
-  .social-media-section .btn {
-    margin-top: 20px;
-  }
-  
+  text-align: center;
+  margin: 50px 0;
+}
+
+.social-media-section .btn {
+  margin-top: 20px;
+}
+
+.card {
+  margin: 0 auto;
+  max-width: 600px;
+}
+
+.card-header {
+  display: flex;
+  align-items: center;
+}
+
+.card-header img {
+  margin-right: 10px;
+}
+
+/* Responsive Design */
+/* Mobile phones (up to 575px) */
+@media (max-width: 575px) {
   .card {
-    margin: 0 auto;
-    max-width: 600px;
+      max-width: 100%;
   }
-  
-  .card-header {
-    display: flex;
-    align-items: center;
+}
+
+/* Tablets (576px to 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .card {
+      max-width: 80%;
   }
-  
-  .card-header img {
-    margin-right: 10px;
+}
+
+/* Laptops (768px to 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .card {
+      max-width: 600px;
   }
-  
+}
+
+/* Desktops (1025px to 1440px) */
+@media (min-width: 1025px) and (max-width: 1440px) {
+  .card {
+      max-width: 700px;
+  }
+}
+
+/* Televisions (1441px and up) */
+@media (min-width: 1441px) {
+  .card {
+      max-width: 800px;
+  }
+}
