--- a/src/components/FeaturedProducts/Featured.scss
+++ b/src/components/FeaturedProducts/Featured.scss
@@ -51,6 +51,10 @@
   margin-bottom: 2px;
 }
 
+#products{
+  margin: 10px;
+}
+
 /* Responsive Design */
 /* Mobile phones (up to 575px) */
 @media (max-width: 575px) {
