--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,12 @@
 /* src/components/Header/Header.css */
-.header {
+#header {
   display: flex;
+  color: white;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
   background-color: slateblue;
+  position: relative;
 }
 
 .logo {
@@ -80,7 +82,6 @@
   }
   .search button {
     border-radius: 5px;
-    margin-left: 5px;
   }
 }
 /* Tablets (576px to 767px) */
