--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -32,7 +32,7 @@
 @media (max-width: 575px) {
   .footer-section {
     padding: 10px 0;
-    text-align: center;
+    text-align: left;
   }
   .footer-section h5 {
     font-size: 1.2rem;
@@ -45,7 +45,7 @@
 @media (min-width: 576px) and (max-width: 767px) {
   .footer-section {
     padding: 15px 0;
-    text-align: center;
+    text-align: left;
   }
   .footer-section h5 {
     font-size: 1.4rem;
