--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -32,7 +32,7 @@
 @media (max-width: 575px) {
   .footer-section {
       padding: 10px 0;
-      text-align: center;
+      text-align: left;
   }
   
   .footer-section h5 {
@@ -48,7 +48,7 @@
 @media (min-width: 576px) and (max-width: 767px) {
   .footer-section {
       padding: 15px 0;
-      text-align: center;
+      text-align: left;
   }
   
   .footer-section h5 {
